--- a/zx_notes/notes/discovery包/重要的类说明.md
+++ b/zx_notes/notes/discovery包/重要的类说明.md
@@ -1,9 +1,8 @@
 ```text
 TODO:  
+Coordinator
 
-ClusterStatePublisher  Discovery  Coordinator
-
-CoordinationMetaData  CoordinationState
+CoordinationMetaData  CoordinationState : 一致性算法的核心
 
 选举；Join  JoinHelper JoinTaskExecutor
 
@@ -18,75 +17,3 @@ NoMasterBlockService
 ClusterBootstrapService
 ClusterFormationFailureHelper
 ```
-
-### 1. HandshakingTransportAddressConnector
-与一个节点握手(建立1个TCP连接)，如果发现它是主备节点，则与之建立完整的连接(13个TCP连接)
-
-### 2. ElectionSchedulerFactory
-用来调度 "cadidate发起一轮选举" 的任务。 类似于raft中随机的选举超时时间。 
-
-每一轮选举的间隔时间 = duration + 一个在[0,maxDelay]区间内的随机整数。其中:
-```
-duration可通过cluster.election.duration来配置,默认为500ms。 
-
-maxDelay = Math.min { 
-    maxTimeout, 
-    initialTimeout + 轮数 * backoffTime
-}
-
-maxTimeout可通过 cluster.election.max_timeout 配置，默认为10秒
-initialTimeout可通过 cluster.election.initial_timeout 配置，默认为100ms
-backoffTime可通过 cluster.election.back_off_time 配置，默认为100ms
-
-```
-
-### 3. SeedHostsProvider
-提供一批种子节点，用于discory。 
-
-##### SettingsBasedSeedHostsProvider
-通过 discovery.seed_hosts 来配置种子节点。通常在里面配置所有的 master-eligible 节点。
-
-
-### 4. SeedHostsResolver
-将SeedHostsProvider中配置的种子节点解析成TransportAddress
-
-
-### 5. PeerFinder
-Peer可以理解为集群中的主备节点，PeerFinder就是不断向其他节点发送请求，从而发现集群中所有的主备节点的过程。
-
-发送的请求如下：
-```text
-PeersRequest:
-(1) 请求方的节点信息  
-(2) 请求方已知的所有主备节点信息。
-```
-接收方会把“请求方节点以及请求方已知的所有主备节点”都添加到 “自身的已知主备节点” 中，并开始探测这些新增节点。同时会给出响应：
-```text
-PeersResponse : 
-(1) 接收方所认为的master节点
-(2) 接收方已知的所有主备节点信息
-(3) 接收方的term
-```
-
-请求方收到响应后，
-```text
-(1) 把响应中的所有节点添加到 “自身的已知主备节点”中，并开始探测，同时触发以下回调函数：
-protected abstract void onFoundPeersUpdated()
-如果已经达到足够数量的主备节点，则使用 ElectionSchedulerFactory 来调度，使用 PreVoteCollector 来请求选票
-
-(2) 如果响应中包含了master信息，则触发以下回调函数，join到已有的集群。 
-protected abstract void onActiveMasterFound(DiscoveryNode masterNode, long term)
-```
-
-### 6. PreVoteCollector
-预投票。  
-向其他的主备节点发出PreVoteRequest，其他节点收到请求后，
-如果它还没有leader，就返回PreVoteResponse；如果已经有leader，就返回异常。
-
-如果收到足够的节点的响应，则开始正式的选举。 
-
-### JoinHelper 
-首先，节点A 向所有已知的主备节点发送 start join请求，其他节点收到请求后，都向节点A发送 join请求，表示投票给A。
-A收集到足够的选票后，就成为leader。 
-
-  
